@@ -1,6 +1,7 @@
 Substitutions for tomorrow after Seeuberquaerung:
 
 * v1 => canary
-* v2 => prod 
+* v2 => prod
 * store => "__PREFIX__-sol1"
 * bifid-external-store => "__PREFIX__-sol1-ext"
+* selector: "app: store" => ricc-awesome-selector: dev-or-staging
