@@ -1,3 +1,4 @@
+* 2022-07-16 0.11.3  found mega bug in sol1: name wasnt __BLAH__-prod but store-canary. Maybe this explains the error.
 * 2022-07-11 v0.10.1 Alex fixed all Kustomize issues. This requires a major change but since I dont want to promote to v1.0
                      I'm going to introduce a minor version instead :)
 * 2022-07-11 v0.9.0 Solution2 is now WORKING.
